[package]
name = "sp1-benchmarks-eval"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
cfg-if = "1.0"

# sp1
sp1-prover = { git = "https://github.com/succinctlabs/sp1", rev = "v1.1.1", optional = true }
sp1-core = { git = "https://github.com/succinctlabs/sp1", rev = "v1.1.1", optional = true }
sp1-server = { git = "https://github.com/succinctlabs/sp1", rev = "v1.1.1", optional = true }

# risc0
risc0-zkvm = { version = "1.0.5", default-features = false, features = [
    "prove",
], optional = true }

# # jolt
# jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
#     "host",
# ], optional = true, rev = "845d39af373de078ee2616cf36a255f36f38334a" }
# fibonacci-jolt = { path = "../programs/fibonacci-jolt", optional = true }
# loop-jolt = { path = "../programs/loop-jolt", optional = true }
# tendermint-jolt = { path = "../programs/tendermint-jolt", optional = true }
# sha2-chain-jolt = { path = "../programs/sha2-chain-jolt", optional = true }

# powdr
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", rev = "e8221e25", optional = true }
powdr-riscv = { git = "https://github.com/powdr-labs/powdr.git", rev = "e8221e25", optional = true }
powdr-pipeline = { git = "https://github.com/powdr-labs/powdr.git", rev = "e8221e25", optional = true }

# so we can enable the avx512 feature
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm.git", rev = "cf405b2e2cecb8567cfd083a55936b71722276d5", optional = true }

# reth
sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", rev = "ba07e254d65a869fbd0501976c3832e4774915d6" }
# sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", branch = "john/update-for-v1" }
chrono = "0.4.38"
env_logger = "0.10.0"

[features]
default = []
sp1 = ["sp1-prover", "sp1-core"]
risc0 = ["risc0-zkvm"]
cuda = ["dep:sp1-server", "risc0-zkvm/cuda"]
powdr-estark = ["powdr-pipeline/estark-polygon", "powdr-riscv", "powdr-number"]
powdr-plonky3 = ["powdr-pipeline/plonky3", "powdr-riscv", "powdr-number"]
avx512 = ["powdr-pipeline/plonky3-simd", "powdr-pipeline/estark-starky-simd"]


# # jolt
# pjolt-zkvm = [
#     "jolt",
#     "fibonacci-jolt",
#     "loop-jolt",
#     "tendermint-jolt",
#     "sha2-chain-jolt",
# ]
