[workspace]
[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v1.0.1", optional = true}
risc0-zkvm = { version = "1.0.1", default-features = false, features = [ "std" ], optional = true}
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr.git", optional = true }

[features]
default = ["powdr"]
powdr = ["powdr-riscv-runtime"]
risc0 = ["risc0-zkvm"]
sp1 = ["sp1-zkvm"]
