[workspace]
[package]
version = "0.1.0"
name = "tendermint-powdr"
edition = "2021"

[dependencies]
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr.git" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.37.0", default-features = false }
tendermint-light-client-verifier = { version = "0.37.0", default-features = false, features = [
    "rust-crypto",
] }

[patch.crates-io]
# TODO: powdr accelerators
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# ed25519-consensus = { git = "https://github.com/risc0/ed25519-consensus", rev = "8a6d26d1fcd377f9322ba83d3732d04c157e4778" }
# crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[features]
powdr = []
